<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

  <data>

    <variable
        name="vm"
        type="com.twitter.feature.login.LoginViewModel"
        />

  </data>

  <LinearLayout
      android:id="@+id/login_root"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="vertical"
      >

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        >

      <android.support.design.widget.TextInputEditText
          android:id="@+id/input_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/login_email_hint"
          android:inputType="textEmailAddress"
          android:text="@={vm.email}"
          />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        >

      <android.support.design.widget.TextInputEditText
          android:id="@+id/input_password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/login_password_hint"
          android:inputType="textPassword"
          android:text="@={vm.password}"
          />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="@{() -> vm.onLoginClicked()}"
        android:text="@string/login_button"
        />

  </LinearLayout>

</layout>
