...
        />

  </data>


  <android.support.design.widget.CoordinatorLayout
      android:id="@+id/home_root"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
...
